--- a/Saad/.vscode/settings.json
+++ b/Saad/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "iostream": "cpp",
-        "fstream": "cpp"
-    }
+        "fstream": "cpp",
+        "ostream": "cpp"
+    },
+    "codium.codeCompletion.enable": true
 }
