--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,9 @@ set(SOURCE_FILES
     regression-analysis/src/GridSearch.cpp
     regression-analysis/src/RandomSearch.cpp
     regression-analysis/src/save.cpp
-    Data/src/Data.cpp
+    Data/src/Scaling.cpp
     Data/src/Analysis.cpp
+    Data/src/Data.cpp
 )
 
 set(HEADER_FILES
