--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,9 +27,9 @@ enable_testing()
 
 add_executable(main ${SOURCE_FILES} ${HEADER_FILES})
  
-#target_link_libraries(main PUBLIC matplot)
+target_link_libraries(main PUBLIC matplot)
 
-#add_subdirectory(matplotplusplus)
+add_subdirectory(matplotplusplus)
 
 target_include_directories(main PUBLIC regression-analysis/include Data/include)
 
